--- a/admin/D_Admin/style.css
+++ b/admin/D_Admin/style.css
@@ -500,7 +500,7 @@ a.sidebar-link:hover {
 
 .Right_Side_shayd {
     width: 100%;
-    background-color: #8fa7eb;
+    background-color: #0e2238;
     opacity: 0.6;
     height: 100vh;
     z-index: 1;
