--- a/admin/D_Admin/style.css
+++ b/admin/D_Admin/style.css
@@ -337,7 +337,8 @@ a {
     background-color: #0e2238;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    /* height: 100vh; */
+    position: sticky;
 }
 
 #sidebar.expand {
